# app/idp/model/authentication.go
@@ -1,0 +1,3 @@
+package model
+
+type Authenticate struct {}
