# app/idp/model/http.go
@@ -1,0 +1,5 @@
+package model
+
+type BadRequest struct {}
+
+type InternalServerError struct {}
